<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_home_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/supportIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/having_trouble"
            android:textSize="30sp"

            android:textStyle="bold"/>

        <TextView
            android:id="@+id/supportIntro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/supportIntro"
            android:text="@string/send_us_a_message"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/supportIntro2"
            android:paddingTop="40dp"
            android:text="@string/hello_admin"
            android:paddingBottom="10dp"
            android:textSize="17sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/messageBody"
            android:layout_below="@+id/greeting"
            android:inputType="textMultiLine"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="18dp"
            android:gravity="top"
            android:selectAllOnFocus="true"
            android:background="@drawable/border"
            android:hint="Start your message here"/>

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/buttonSubmitMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/messageBody"
            android:layout_marginLeft="200dp"
            android:text="@string/submit_message"/>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_home_page">

        <ExpandableListView
            android:id="@+id/nav_drawer_sub_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:groupIndicator="@null"
            android:paddingTop="180dp" />

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
